--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Twittor</title>
 
@@ -14,11 +14,12 @@
     <link rel="stylesheet" href="css/animate.css">
 
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
+
     <link rel="manifest" href="manifest.json">
 
     <!-- Android -->
-    <meta name="theme-color" content="#3498db"></>
-    
+    <meta name="theme-color" content="#3498db">
+
     <!-- IOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -41,7 +42,6 @@
 
     <meta name="apple-mobile-web-app-title" content="Twittor!">
 
-    
 </head>
 <body>
         <!-- Titulo -->
